# claude-spec-workflow

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
spec_driven_workflow/: __init__.py  auto_run_models.py  auto_runner.py  cli.py  commands.py  exceptions.py  git.py  mcp_models.py  migration.py  migration_validator.py  setup.py  steering.py  task_generator.py  templates.py  utils.py
spec_driven_workflow/dashboard/: __init__.py  cli.py  parser.py  terminal.py  watcher.py
